--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,8 +2,8 @@
 <!-- Navigation Bar -->
 <div class="w3-bar w3-white w3-large card">
     <a href="/" class="w3-bar-item w3-button w3-teal w3-mobile"><i class="fa fa-bed w3-margin-right"></i>Tribook</a>
-    <a href="#about" class="w3-bar-item w3-button w3-mobile">Sobre nosotros</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-mobile">Contacto</a>
+    <a href="/about-us" class="w3-bar-item w3-button w3-mobile">Sobre nosotros</a>
+    <a href="/contact" class="w3-bar-item w3-button w3-mobile">Contacto</a>
     <% if (isAdmin) { %>
         <a href="/admin/apartment/new-apartment" class="w3-bar-item w3-button w3-mobile">Añadir apartamento</a>
         <a href="/logout" class="w3-bar-item w3-button w3-right w3-light-grey w3-mobile">Logout</a>
