--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>Sobre nosotros</title>
+        <%- include('./partials/head.ejs') %>
+    </head>
 
-<head>
-    <title>Tribook</title>
-    <%- include('./partials/head.ejs') %>
-</head>
-
-<body>
-    <header class="container-fluid">
-        <%- include('./partials/header.ejs') %>
-    </header>
-    <main class="container">
-        <h1>Sobre Nosotros</h1>
-        <p>
-            En <strong>Tribook</strong>, facilitamos la búsqueda y reserva de apartamentos únicos en ubicaciones excepcionales. Nuestro objetivo es ofrecer a los viajeros una plataforma intuitiva y confiable para encontrar su hogar ideal, ya sea para una escapada de fin de semana o una estancia prolongada.
-        </p>
-        <p>
-            Desde nuestra fundación, nos hemos comprometido a conectar a propietarios con personas que buscan experiencias auténticas. Creemos en la importancia de la comodidad, el estilo y la accesibilidad, y trabajamos para que cada reserva en Tribook sea tan sencilla como gratificante.
-        </p>
-        <p>
-            Tribook no es solo una plataforma de reserva de apartamentos; es una comunidad de anfitriones dedicados y huéspedes que valoran la calidad, la hospitalidad y las experiencias memorables. Cada propiedad es seleccionada cuidadosamente para garantizar que nuestros usuarios encuentren el lugar perfecto para su próxima aventura.
-        </p>
-    </main>
-        <!-- Footer -->
-        <footer class="w3-container w3-center w3-opacity w3-margin-bottom">
-          <h5>Búscanos en redes sociales</h5>
-          <div class="w3-xlarge w3-padding-16">
-            <i class="fa fa-facebook-official w3-hover-opacity"></i>
-            <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-snapchat w3-hover-opacity"></i>
-            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-            <i class="fa fa-twitter w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
-          </div>
-        </footer>
-</body>
-
+    <body>
+        <header class="container-fluid">
+            <%- include('./partials/header.ejs') %>
+        </header>
+        <main class="container">
+            <h1>Sobre Nosotros</h1>
+            <p>
+                En <strong>Tribook</strong>, facilitamos la búsqueda y reserva de apartamentos únicos en ubicaciones excepcionales. Nuestro objetivo es ofrecer a los viajeros una plataforma intuitiva y confiable para encontrar su hogar ideal, ya sea para una escapada de fin de semana o una estancia prolongada.
+            </p>
+            <p>
+                Desde nuestra fundación, nos hemos comprometido a conectar a propietarios con personas que buscan experiencias auténticas. Creemos en la importancia de la comodidad, el estilo y la accesibilidad, y trabajamos para que cada reserva en Tribook sea tan sencilla como gratificante.
+            </p>
+            <p>
+                Tribook no es solo una plataforma de reserva de apartamentos; es una comunidad de anfitriones dedicados y huéspedes que valoran la calidad, la hospitalidad y las experiencias memorables. Cada propiedad es seleccionada cuidadosamente para garantizar que nuestros usuarios encuentren el lugar perfecto para su próxima aventura.
+            </p>
+        </main>
+            <!-- Footer -->
+            <footer class="w3-container w3-center w3-opacity w3-margin-bottom">
+            <h5>Búscanos en redes sociales</h5>
+            <div class="w3-xlarge w3-padding-16">
+                <i class="fa fa-facebook-official w3-hover-opacity"></i>
+                <i class="fa fa-instagram w3-hover-opacity"></i>
+                <i class="fa fa-snapchat w3-hover-opacity"></i>
+                <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+                <i class="fa fa-twitter w3-hover-opacity"></i>
+                <i class="fa fa-linkedin w3-hover-opacity"></i>
+            </div>
+            </footer>
+    </body>
 </html>
