Styles have been added

--- a/views/new-booking.ejs
+++ b/views/new-booking.ejs
@@ -21,7 +21,7 @@
                 <input type="date" name="endDate" id="endDate">
             </div>
             <input class="w3-btn w3-teal" type="submit" value="Añadir reserva">
-            <a href="/" style="border-radius: 5px; width: 100%; padding: 15px;" class="w3-btn w3-black">Regresar al home</a>
+            <a href="/" style="border-radius: 5px; width: 100%; padding: 15px;" class="w3-btn w3-black">Regresar a la página principal</a>
         </form>
         <script>
             // Get today's date
