--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,8 +34,8 @@
                 </select>
                 </div>
                 <div class="w3-col m2">
-                    <label for="max-price"><i class="fa fa-eur"></i> Precio noche</label>
-                    <input class="w3-input w3-border" type="number" placeholder="15€" name="max-price" id="max-price" required min="0">
+                    <label for="max-price"><i class="fa fa-eur"></i> Precio max/noche</label>
+                    <input class="w3-input w3-border" type="number" placeholder="15" name="max-price" id="max-price" required min="0">
                 </div>
                 <div class="w3-col m2">
                 <label><i class="fa fa-search"></i> Búsqueda</label>
