--- a/views/new-booking.ejs
+++ b/views/new-booking.ejs
@@ -20,8 +20,10 @@
                 <label for="endDate">Fecha de finalización: </label>
                 <input type="date" name="endDate" id="endDate">
             </div>
-            <input class="w3-btn w3-teal" type="submit" value="Añadir reserva">
-            <a href="/" style="border-radius: 5px; width: 100%; padding: 15px;" class="w3-btn w3-black">Regresar a la página principal</a>
+            <div class="w3-row-padding grid" style="padding-bottom: 50px; justify-content: center;">
+                <input style="border-radius: 5px; width: 250px; padding: 15px; height: 52px;" class="w3-btn w3-teal" type="submit" value="Añadir reserva">
+                <a href="/" style="border-radius: 5px; width: 250px; padding: 15px; height: 52px;" class="w3-btn w3-black">Volver</a>
+            </div>
         </form>
         <script>
             // Get today's date
