Fixing btn responsive

--- a/views/detail-apartment.ejs
+++ b/views/detail-apartment.ejs
@@ -102,7 +102,7 @@
                 <% } %>
             </div>
         </main>
-        <footer class="w3-row-padding grid" style="padding-bottom: 50px; justify-content: center;">
+        <div class="w3-row-padding grid" style="width: 100%; padding-bottom: 50px; justify-content: center;">
             <% if (isAdmin) { %>
                 <a href="/admin/apartment/<%= selectedApartment._id %>/edit/" style="height: 52px; border-radius: 5px; width: 250px; padding: 15px;" class="w3-btn w3-teal">Editar apartamento</a>
                 <% } else { %>
